helm/manifests/homepage-config.yaml
---
# Homepage namespace
apiVersion: v1
kind: Namespace
metadata:
  name: homepage
